--- a/Src/Pages/index.html
+++ b/Src/Pages/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../Css/Global.css">
     <link rel="stylesheet" href="../Css/Index.css">
     <link rel="stylesheet" href="../Css/Header.css">
+    <link rel="shortcut icon" href="../../Images/flamelogo trans.png" type="image/x-icon">
 
     <title>Flame Sports</title>
   </head>
@@ -20,7 +21,7 @@
     <header>  
       
       <img src="../../Images/simbolo-de-interface-de-lista.svg" alt="Símbolo de interface de lista" class="menu-interface">
-      <img src="../../Images/flamelogo trans.png" alt="Flame Sports" class="logo-hidden">
+      <a href="" class="logo-hidden"><img src="../../Images/flamelogo trans.png" alt="Flame Sports"></a>
       <nav>
         <ul>
 
@@ -59,8 +60,8 @@
       <section>
 
         <div id="title">
-          <h2>| &nbsp APRESENTANDO &nbsp |</h2>
-          <h1>FLAME SPORTS</h1>
+          <h2 class="fadeInShort">| &nbsp APRESENTANDO &nbsp |</h2>
+          <h1 class="fadeInLong">FLAME SPORTS</h1>
         </div>
 
         <div class="content">
