Responsive 100% and update home page

--- a/Src/Pages/index.html
+++ b/Src/Pages/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../Css/Global.css">
     <link rel="stylesheet" href="../Css/Index.css">
+    <link rel="stylesheet" href="../Css/AboutUs.css">
     <link rel="stylesheet" href="../Css/Header.css">
     <link rel="shortcut icon" href="../../Images/flamelogo trans.png" type="image/x-icon">
 
@@ -19,45 +20,50 @@
   <body>
 
     <header>  
-      
-      <img src="../../Images/simbolo-de-interface-de-lista.svg" alt="Símbolo de interface de lista" class="menu-interface">
-      <a href="" class="logo-hidden"><img src="../../Images/flamelogo trans.png" alt="Flame Sports"></a>
-      <nav>
-        <ul>
-
-          <li class="menu selected">
-            <a href="">INÍCIO</a>
-          </li>
-
-          <li class="menu">
-            <a href="">SOBRE NÓS</a>
-          </li>
-
-          <li>
-            <a href="">
-              <img src="../../Images/flamelogo trans.png" alt="Flame Sports">
-            </a>
-          </li>
-
-          <li class="menu">
-            <a href="">PÁGINA</a>
-          </li>
-
-          <li class="menu">
-            <a href="">PRÊMIOS</a>
-          </li>
-
-        </ul>
-      </nav>
-
-      <a href="https://google.com">
-        <img class="image-instagram" src="../../Images/instagram.svg" alt="Instagram">
-      </a>
+      <div class="header">
+        <div class="menu-interface-div">
+          <img src="../../Images/menu.svg" alt="Símbolo de interface de lista" class="menu-interface">
+        </div>
+  
+        <a href="Index.html" class="logo-hidden"><img src="../../Images/flamelogo trans.png" alt="Flame Sports"></a>
+  
+        <nav>
+          <ul>
+  
+            <li class="menu selected">
+              <a href="Index.html">INÍCIO</a>
+            </li>
+  
+            <li class="menu">
+              <a href="AboutUs.html">SOBRE NÓS</a>
+            </li>
+  
+            <li>
+              <a href="Index.html">
+                <img src="../../Images/flamelogo trans.png" alt="Flame Sports">
+              </a>
+            </li>
+  
+            <li class="menu">
+              <a href="Pagina.html">PÁGINA</a>
+            </li>
+  
+            <li class="menu">
+              <a href="Premios.html">PRÊMIOS</a>
+            </li>
+  
+          </ul>
+        </nav>
+  
+        <a href="https://google.com">
+          <img class="image-instagram" src="../../Images/instagram.svg" alt="Instagram">
+        </a>
+      </div>
 
     </header>
 
     <main>
-      <section>
+      <section class="home">
 
         <div id="title">
           <h2 class="fadeInShort">| &nbsp APRESENTANDO &nbsp |</h2>
@@ -79,6 +85,11 @@
 
         </div>
 
+      </section>
+
+      <section class="about-us">
+        <div>
+        </div>
       </section>
     </main>
 
