--- a/Src/index.html
+++ b/Src/index.html
@@ -8,15 +8,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../Css/Global.css">
-    <link rel="stylesheet" href="../Css/Header.css">
-    <link rel="stylesheet" href="../Css/Index.css">
-    <link rel="stylesheet" href="../Css/AboutUs.css">
-    <link rel="stylesheet" href="../Css/Patron.css">
-    <link rel="stylesheet" href="../Css/Team.css">
-    <link rel="stylesheet" href="../Css/Footer.css">
+    <link rel="stylesheet" href="./Css/Global.css">
+    <link rel="stylesheet" href="./Css/Header.css">
+    <link rel="stylesheet" href="./Css/Index.css">
+    <link rel="stylesheet" href="./Css/AboutUs.css">
+    <link rel="stylesheet" href="./Css/Patron.css">
+    <link rel="stylesheet" href="./Css/Team.css">
+    <link rel="stylesheet" href="./Css/Footer.css">
 
-    <link rel="shortcut icon" href="../../Images/flamelogo trans.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../Images/flamelogo trans.png" type="image/x-icon">
 
     <title>Flame Sports</title>
   </head>
@@ -26,10 +26,10 @@
     <header>  
       <div class="header">
         <div class="menu-interface-div">
-          <img src="../../Images/menu.svg" alt="Símbolo de interface de lista" class="menu-interface">
+          <img src="../Images/menu.svg" alt="Símbolo de interface de lista" class="menu-interface">
         </div>
   
-        <a href="#home" class="logo-hidden"><img src="../../Images/flamelogo trans.png" alt="Flame Sports"></a>
+        <a href="#home" class="logo-hidden"><img src="../Images/flamelogo trans.png" alt="Flame Sports"></a>
   
         <nav>
           <ul>
@@ -44,7 +44,7 @@
   
             <li>
               <a href="#home">
-                <img src="../../Images/flamelogo trans.png" alt="Flame Sports">
+                <img src="../Images/flamelogo trans.png" alt="Flame Sports">
               </a>
             </li>
   
@@ -64,7 +64,7 @@
         </nav>
   
         <a href="https://www.instagram.com/flamesports._/" target="_blank">
-          <img class="image-instagram" src="../../Images/instagram.svg" alt="Instagram">
+          <img class="image-instagram" src="../Images/instagram.svg" alt="Instagram">
         </a>
       </div>
 
@@ -147,7 +147,7 @@
         <div>
           <div class="container-patron">
         
-            <img class="img-patron" src="../../Images/Philip.png" alt="Philip Noel-Baker">
+            <img class="img-patron" src="../Images/Philip.png" alt="Philip Noel-Baker">
                 
             <div>
               <div class="name-patron">
@@ -178,7 +178,7 @@
         <div class="container-team">
 
           <div>
-            <img src="../../Images/Profiles/AnnaPerfil.jfif" alt="Anna Clara">  
+            <img src="../Images/Profiles/AnnaPerfil.jfif" alt="Anna Clara">  
 
             <div class="name-pos">
               <span>Anna Clara</span>
@@ -187,7 +187,7 @@
           </div>
 
           <div>
-            <img src="../../Images/Profiles/perfil2.jpg" alt="Emily Rosa">  
+            <img src="../Images/Profiles/perfil2.jpg" alt="Emily Rosa">  
   
             <div class="name-pos">
               <span>Emily Rosa</span>
@@ -196,7 +196,7 @@
           </div>
 
           <div>
-            <img src="../../Images/Profiles/Perfil1.jpg" alt="Fabrício Sgarbi">  
+            <img src="../Images/Profiles/Perfil1.jpg" alt="Fabrício Sgarbi">  
   
             <div class="name-pos">
               <span>Fabrício Sgarbi</span>
@@ -205,7 +205,7 @@
           </div>
 
           <div>
-            <img src="../../Images/Profiles/FreirePerfil.jfif" alt="Gabriel Freire">  
+            <img src="../Images/Profiles/FreirePerfil.jfif" alt="Gabriel Freire">  
 
             <div class="name-pos">
               <span>Gabriel Freire</span>
@@ -214,7 +214,7 @@
           </div>
 
           <div>
-            <img src="../../Images/Profiles/PoloPerfil.jfif" alt="Gabriel Polo">  
+            <img src="../Images/Profiles/PoloPerfil.jfif" alt="Gabriel Polo">  
 
             <div class="name-pos">
               <span>Gabriel Polo</span>
@@ -223,7 +223,7 @@
           </div>
 
           <div>
-            <img src="../../Images/Profiles/Perfil1.jpg" alt="Gustavo Marques">  
+            <img src="../Images/Profiles/Perfil1.jpg" alt="Gustavo Marques">  
   
             <div class="name-pos">
               <span>Gustavo Marques</span>
@@ -232,7 +232,7 @@
           </div>
 
           <div>
-            <img src="../../Images/Profiles/Perfil1.jpg" alt="Gustavo Tavares">  
+            <img src="../Images/Profiles/Perfil1.jpg" alt="Gustavo Tavares">  
   
             <div class="name-pos">
               <span>Gustavo Tavares</span>
@@ -241,7 +241,7 @@
           </div>
 
           <div>
-            <img src="../../Images/Profiles/GiovannaPerfil.jfif" alt="Giovanna">  
+            <img src="../Images/Profiles/GiovannaPerfil.jfif" alt="Giovanna">  
 
             <div class="name-pos">
               <span>Giovanna</span>
@@ -250,7 +250,7 @@
           </div>
 
           <div>
-            <img src="../../Images/Profiles/HeitorPerfil.jfif" alt="Heitor">  
+            <img src="../Images/Profiles/HeitorPerfil.jfif" alt="Heitor">  
 
             <div class="name-pos">
               <span>Heitor</span>
@@ -259,7 +259,7 @@
           </div>
 
           <div>
-            <img src="../../Images/Profiles/IsabellaPerfil.jfif" alt="Isabella Muller">  
+            <img src="../Images/Profiles/IsabellaPerfil.jfif" alt="Isabella Muller">  
 
             <div class="name-pos">
               <span>Isabella Muller</span>
@@ -268,7 +268,7 @@
           </div>
 
           <div>
-            <img src="../../Images/Profiles/perfil1.jpg" alt="João Jesus">  
+            <img src="../Images/Profiles/perfil1.jpg" alt="João Jesus">  
 
             <div class="name-pos">
               <span>João Jesus</span>
@@ -277,7 +277,7 @@
           </div>
 
           <div>
-            <img src="../../Images/Profiles/perfil2.jpg" alt="Julia Kotinda">  
+            <img src="../Images/Profiles/perfil2.jpg" alt="Julia Kotinda">  
 
             <div class="name-pos">
               <span>Julia Kotinda</span>
@@ -286,7 +286,7 @@
           </div>
 
           <div>
-            <img src="../../Images/Profiles/perfil2.jpg" alt="Julya Nicole">  
+            <img src="../Images/Profiles/perfil2.jpg" alt="Julya Nicole">  
   
             <div class="name-pos">
               <span>Julya Nicole</span>
@@ -295,7 +295,7 @@
           </div>
 
           <div>
-            <img src="../../Images/Profiles/LuanPerfil.jfif" alt="">  
+            <img src="../Images/Profiles/LuanPerfil.jfif" alt="">  
 
             <div class="name-pos">
               <span>Luan Silvestre</span>
@@ -304,7 +304,7 @@
           </div>
 
           <div>
-            <img src="../../Images/Profiles/Perfil1.jpg" alt="Luiggi storani">  
+            <img src="../Images/Profiles/Perfil1.jpg" alt="Luiggi storani">  
 
             <div class="name-pos">
               <span>Luiggi storani</span>
@@ -313,7 +313,7 @@
           </div>
 
           <div>
-            <img src="../../Images/Profiles/perfil2.jpg" alt="Maria Eduarda">  
+            <img src="../Images/Profiles/perfil2.jpg" alt="Maria Eduarda">  
 
             <div class="name-pos">
               <span>Maria Eduarda</span>
@@ -322,7 +322,7 @@
           </div>
 
           <div>
-            <img src="../../Images/Profiles/Perfil1.jpg" alt="Pedro Zicatti">  
+            <img src="../Images/Profiles/Perfil1.jpg" alt="Pedro Zicatti">  
   
             <div class="name-pos">
               <span>Pedro Zicatti</span>
@@ -331,7 +331,7 @@
           </div>
 
           <div>
-            <img src="../../Images/Profiles/RyanPerfil.jfif" alt="Ryan">  
+            <img src="../Images/Profiles/RyanPerfil.jfif" alt="Ryan">  
   
             <div class="name-pos">
               <span>Ryan</span>
@@ -340,7 +340,7 @@
           </div>
 
           <div>
-            <img src="../../Images/Profiles/perfil2.jpg" alt="Vincenzo">  
+            <img src="../Images/Profiles/perfil2.jpg" alt="Vincenzo">  
   
             <div class="name-pos">
               <span>Vincenzo</span>
@@ -371,7 +371,7 @@
 
 </html>
 
-<script src="../JS/jquery.js"></script>
-<script src="../JS/SelectMenu.js"></script>
-<script src="../JS/MenuSelected.js"></script>
-<script src="../JS/Slider.js"></script>
+<script src="JS/jquery.js"></script>
+<script src="JS/SelectMenu.js"></script>
+<script src="JS/MenuSelected.js"></script>
+<script src="JS/Slider.js"></script>
