--- a/Src/index.html
+++ b/Src/index.html
@@ -196,7 +196,7 @@
           </div>
 
           <div>
-            <img src="../Images/Profiles/Perfil1.jpg" alt="Fabrício Sgarbi">  
+            <img src="../Images/Profiles/FabricioPerfil.jfif" alt="Fabrício Sgarbi">  
   
             <div class="name-pos">
               <span>Fabrício Sgarbi</span>
@@ -232,7 +232,7 @@
           </div>
 
           <div>
-            <img src="../Images/Profiles/Perfil1.jpg" alt="Gustavo Tavares">  
+            <img src="../Images/Profiles/TavaresPerfil.jfif" alt="Gustavo Tavares">  
   
             <div class="name-pos">
               <span>Gustavo Tavares</span>
@@ -268,7 +268,7 @@
           </div>
 
           <div>
-            <img src="../Images/Profiles/perfil1.jpg" alt="João Jesus">  
+            <img src="../Images/Profiles/JesusPerfil.jfif" alt="João Jesus">  
 
             <div class="name-pos">
               <span>João Jesus</span>
@@ -313,7 +313,7 @@
           </div>
 
           <div>
-            <img src="../Images/Profiles/perfil2.jpg" alt="Maria Eduarda">  
+            <img src="../Images/Profiles/DudaPerfil.jfif" alt="Maria Eduarda">  
 
             <div class="name-pos">
               <span>Maria Eduarda</span>
@@ -322,7 +322,7 @@
           </div>
 
           <div>
-            <img src="../Images/Profiles/Perfil1.jpg" alt="Pedro Zicatti">  
+            <img src="../Images/Profiles/PedroPerfil.jfif" alt="Pedro Zicatti">  
   
             <div class="name-pos">
               <span>Pedro Zicatti</span>
@@ -340,7 +340,7 @@
           </div>
 
           <div>
-            <img src="../Images/Profiles/perfil2.jpg" alt="Vincenzo">  
+            <img src="../Images/Profiles/VincenzoPerfil.jfif" alt="Vincenzo">  
   
             <div class="name-pos">
               <span>Vincenzo</span>
