--- a/index.html
+++ b/index.html
@@ -374,4 +374,4 @@
 <script src="Src/JS/jquery.js"></script>
 <script src="Src/JS/SelectMenu.js"></script>
 <script src="Src/JS/MenuSelected.js"></script>
-<script src="Src/JS/Slider.js"></script>
+<!-- <script src="Src/JS/Slider.js"></script> -->
