--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           </div>
 
           <div>
-            <img src="/Images/Profiles/perfil2.jpg" alt="Emily Rosa">  
+            <img src="/Images/Profiles/EmilyPerfil.jfif" alt="Emily Rosa">  
   
             <div class="name-pos">
               <span>Emily Rosa</span>
@@ -223,7 +223,7 @@
           </div>
 
           <div>
-            <img src="/Images/Profiles/Perfil1.jpg" alt="Gustavo Marques">  
+            <img src="/Images/Profiles/MarquesPerfil.jfif" alt="Gustavo Marques">  
   
             <div class="name-pos">
               <span>Gustavo Marques</span>
@@ -277,7 +277,7 @@
           </div>
 
           <div>
-            <img src="/Images/Profiles/perfil2.jpg" alt="Julia Kotinda">  
+            <img src="/Images/Profiles/KotindaPerfil.jfif" alt="Julia Kotinda">  
 
             <div class="name-pos">
               <span>Julia Kotinda</span>
@@ -286,7 +286,7 @@
           </div>
 
           <div>
-            <img src="/Images/Profiles/perfil2.jpg" alt="Julya Nicole">  
+            <img src="/Images/Profiles/NycolePerfil.jfif" alt="Julya Nicole">  
   
             <div class="name-pos">
               <span>Julya Nicole</span>
@@ -304,7 +304,7 @@
           </div>
 
           <div>
-            <img src="/Images/Profiles/Perfil1.jpg" alt="Luiggi storani">  
+            <img src="/Images/Profiles/x.png" alt="Luiggi storani">  
 
             <div class="name-pos">
               <span>Luiggi storani</span>
@@ -349,8 +349,6 @@
           </div>
 
         </div>
-
-
       </section>
 
       <div class="open-footer">
@@ -372,6 +370,6 @@
 </html>
 
 <script src="Src/JS/jquery.js"></script>
-<script src="Src/JS/SelectMenu.js"></script>
 <script src="Src/JS/MenuSelected.js"></script>
+<script src="Src/JS/SelectMenu.js"></script>
 <!-- <script src="Src/JS/Slider.js"></script> -->
