--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           </div>
 
           <div>
-            <img src="/Images/Profiles/x.png" alt="Luiggi storani">  
+            <img src="/Images/Profiles/LuiggiPerfil.jfif" alt="Luiggi storani">  
 
             <div class="name-pos">
               <span>Luiggi storani</span>
